--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -4,7 +4,7 @@
 
 // Svelte Colors!
 @use '@material/theme/index' as theme with (
-  $primary: #ff3e00,
+  $primary: #0b4a9c,
   $secondary: #676778,
   $surface: #fff,
   $background: #fff,
@@ -22,4 +22,9 @@ a {
 }
 a:visited {
   color: color.scale(#40b3ff, $lightness: -35%);
+}
+
+
+.mdc-slider{
+  margin: 0 10px !important;
 }
